--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ api_key.txt
 Geospatial_Coordinates.csv
 toronto_website_cluster_geocode.ipynb
 ~$ta Discussion.txt
+moving_challenge - Copy.ipynb
