--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ Geospatial_Coordinates.csv
 toronto_website_cluster_geocode.ipynb
 ~$ta Discussion.txt
 moving_challenge - Copy.ipynb
+Final Report 2.docx
